Create a simple transformer without ts-jest

--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "build": "tsc -P tsconfig-build.json",
-    "test": "nyc mocha --recursive test/**/*.ts",
-    "test-jest": "jest --coverage",
-    "test-watch": "mocha -R progress --watch --compilers ts:ts-node/register test/**/*.ts",
-    "codecov": "codecov -f coverage/coverage-final.json",
+    "test-mocha": "mocha --compilers ts:ts-node/register test-mocha/**/*.ts",
+    "test-jest": "jest",
     "bench": "node bench"
   },
   "author": "Simon Friis Vindum",
@@ -46,10 +43,10 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.tsx?$": "<rootDir>/ts-transformer.js"
     },
     "testMatch": [
-      "<rootDir>/test/**/*.ts"
+      "<rootDir>/test-jest/**/*.ts"
     ],
     "moduleFileExtensions": [
       "ts",
