--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist",
-    "noImplicitAny": true,
-    "sourceMap": true
+    "module": "commonjs"
   },
   "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
+    "src-mocha/**/*.ts",
+    "test-mocha/**/*.ts"
   ],
   "exclude": [
     "node_modules"
