update test commands

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "tsc -P tsconfig-build.json",
-    "test": "nyc mocha --recursive test/**/*.ts",
-    "test-jest": "jest --coverage",
+    "test": "mocha --recursive --compilers ts:ts-node/register test/**/*.ts",
+    "test-jest": "jest",
     "test-watch": "mocha -R progress --watch --compilers ts:ts-node/register test/**/*.ts",
     "codecov": "codecov -f coverage/coverage-final.json",
     "bench": "node bench"
